crates/apollo-compiler/test_data/diagnostics/0026_interface_definition_with_missing_implemetns_interface.txt
Error: Transitively implemented interfaces must also be defined on an implementing interface or object
    ╭─[0026_interface_definition_with_missing_implemetns_interface.graphql:15:1]
    │
  9 │     interface Resource implements Node {
    │                                   ──┬─  
    │                                     ╰─── implementation of Node declared by Resource here
    │ 
 15 │ ╭─▶ interface Image implements Resource {
    ┆ ┆   
 20 │ ├─▶ }
    │ │      
    │ ╰────── Node must also be implemented here
────╯

